// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preloader component should render big with error 1`] = `
.c0 {
  width: 100%;
  text-align: center;
  margin-top: 20px;
}

.c1 {
  font-size: 50pt;
  text-align: center;
  color: #6F8185;
}

.c2 {
  width: 250px;
  height: 80px;
  margin-top: 20px;
  background-color: #C9D2D7;
  border: none;
}

.c2 svg {
  width: 50px;
  height: 50px;
  fill: #6F8185;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Some error
  </div>
  <button
    class="c2"
  >
    <svg>
      Refresh.svg
    </svg>
  </button>
</div>
`;

exports[`Preloader component should render big without error 1`] = `
.c0 {
  width: 100%;
  text-align: center;
  margin-top: 20px;
}

.c1 {
  font-size: 50pt;
  text-align: center;
  color: #6F8185;
}

.c2 {
  width: 250px;
  height: 80px;
  margin-top: 20px;
  background-color: #C9D2D7;
  border: none;
}

.c2 svg {
  width: 50px;
  height: 50px;
  fill: #6F8185;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Подождите, данные загружаются
  </div>
  <button
    class="c2"
  >
    <svg>
      Refresh.svg
    </svg>
  </button>
</div>
`;

exports[`Preloader component should render small with error 1`] = `
.c0 {
  width: 100%;
  text-align: center;
  margin-top: 20px;
}

.c1 {
  font-size: 25px;
  text-align: center;
  color: #6F8185;
}

.c2 {
  width: 250px;
  height: 80px;
  margin-top: 20px;
  background-color: #C9D2D7;
  border: none;
}

.c2 svg {
  width: 50px;
  height: 50px;
  fill: #6F8185;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Some error
  </div>
  <button
    class="c2"
  >
    <svg>
      Refresh.svg
    </svg>
  </button>
</div>
`;

exports[`Preloader component should render small without error 1`] = `
.c0 {
  width: 100%;
  text-align: center;
  margin-top: 20px;
}

.c1 {
  font-size: 25px;
  text-align: center;
  color: #6F8185;
}

.c2 {
  width: 250px;
  height: 80px;
  margin-top: 20px;
  background-color: #C9D2D7;
  border: none;
}

.c2 svg {
  width: 50px;
  height: 50px;
  fill: #6F8185;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Подождите, данные загружаются
  </div>
  <button
    class="c2"
  >
    <svg>
      Refresh.svg
    </svg>
  </button>
</div>
`;
